# rack-spline-lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sislnurbsgen.cpp  sislnurbsgen.h
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clang-format.yml  cmake-single-platform.yml
examples/: CMakeLists.txt  TestVisual_examples.ipynb  calculate_spline_length.cpp  create_blended_full_spline.cpp  create_blended_spline.cpp  create_interpolation_spline.cpp  create_offset_spline.cpp  create_s_spline.cpp  create_simple_splines.cpp  path_based_spline.cpp  time_measure_spline.cpp
examples/.ipynb_checkpoints/: TestNotebook-checkpoint.ipynb
